user-service/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  labels:
    name: user-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.testsejutarasa.user
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001
